unpackaged/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Average_Room_Cost__c</fullName>
        <description>Copied from Data Cloud Spend Profile Calculated Insight</description>
        <label>Average Room Cost</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guest_Summary__c</fullName>
        <description>Aggregates key information about the guest&apos;s preferences, historical bookings, activity participation, and loyalty status into a concise profile. This summary serves as a quick reference for staff to deliver personalized service and anticipate guest needs effectively.</description>
        <label>Guest Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Guest_Type__c</fullName>
        <description>Defines the category of the guest based on their preferences, purpose of visit, and characteristics. This field helps the resort in tailoring services, offers, and communications to enhance the guest experience. It includes values such as Eco-Luxury Travelers, Tech-Savvy Explorers, Wellness Seekers, etc., reflecting the diverse clientele the resort serves.</description>
        <label>Guest Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adventure Enthusiasts</fullName>
                </value>
                <value>
                    <fullName>Business and Pleasure Travelers</fullName>
                </value>
                <value>
                    <fullName>Celebration Groups</fullName>
                </value>
                <value>
                    <fullName>Cultural Connoisseurs</fullName>
                </value>
                <value>
                    <fullName>Digital Detoxers</fullName>
                </value>
                <value>
                    <fullName>Eco-Luxury Travelers</fullName>
                </value>
                <value>
                    <fullName>Family Fun Seekers</fullName>
                </value>
                <value>
                    <fullName>Gourmet Globetrotters</fullName>
                </value>
                <value>
                    <fullName>Romance Retreaters</fullName>
                </value>
                <value>
                    <fullName>Solitude Seekers</fullName>
                </value>
                <value>
                    <fullName>Tech-Savvy Explorers</fullName>
                </value>
                <value>
                    <fullName>Wellness Seekers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest1__c</fullName>
        <label>Interest 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adventure Activities</fullName>
                </value>
                <value>
                    <fullName>Beaches &amp; Snorkeling</fullName>
                </value>
                <value>
                    <fullName>Cultural Tours &amp; Workshops</fullName>
                </value>
                <value>
                    <fullName>Dining Experiences</fullName>
                </value>
                <value>
                    <fullName>Family &amp; Kids&apos; Activities</fullName>
                </value>
                <value>
                    <fullName>Fitness &amp; Exercise</fullName>
                </value>
                <value>
                    <fullName>Golf</fullName>
                </value>
                <value>
                    <fullName>Nature &amp; Eco Tours</fullName>
                </value>
                <value>
                    <fullName>Nightlife &amp; Entertainment</fullName>
                </value>
                <value>
                    <fullName>Relaxation &amp; Quiet Zones</fullName>
                </value>
                <value>
                    <fullName>Spa &amp; Wellness</fullName>
                </value>
                <value>
                    <fullName>Swimming Pools</fullName>
                </value>
                <value>
                    <fullName>Tennis &amp; Pickleball</fullName>
                </value>
                <value>
                    <fullName>Water Sports</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest2__c</fullName>
        <label>Interest 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adventure Activities</fullName>
                </value>
                <value>
                    <fullName>Beaches &amp; Snorkeling</fullName>
                </value>
                <value>
                    <fullName>Cultural Tours &amp; Workshops</fullName>
                </value>
                <value>
                    <fullName>Dining Experiences</fullName>
                </value>
                <value>
                    <fullName>Family &amp; Kids&apos; Activities</fullName>
                </value>
                <value>
                    <fullName>Fitness &amp; Exercise</fullName>
                </value>
                <value>
                    <fullName>Golf</fullName>
                </value>
                <value>
                    <fullName>Nature &amp; Eco Tours</fullName>
                </value>
                <value>
                    <fullName>Nightlife &amp; Entertainment</fullName>
                </value>
                <value>
                    <fullName>Relaxation &amp; Quiet Zones</fullName>
                </value>
                <value>
                    <fullName>Spa &amp; Wellness</fullName>
                </value>
                <value>
                    <fullName>Swimming Pools</fullName>
                </value>
                <value>
                    <fullName>Tennis &amp; Pickleball</fullName>
                </value>
                <value>
                    <fullName>Water Sports</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest3__c</fullName>
        <label>Interest 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adventure Activities</fullName>
                </value>
                <value>
                    <fullName>Beaches &amp; Snorkeling</fullName>
                </value>
                <value>
                    <fullName>Cultural Tours &amp; Workshops</fullName>
                </value>
                <value>
                    <fullName>Dining Experiences</fullName>
                </value>
                <value>
                    <fullName>Family &amp; Kids&apos; Activities</fullName>
                </value>
                <value>
                    <fullName>Fitness &amp; Exercise</fullName>
                </value>
                <value>
                    <fullName>Golf</fullName>
                </value>
                <value>
                    <fullName>Nature &amp; Eco Tours</fullName>
                </value>
                <value>
                    <fullName>Nightlife &amp; Entertainment</fullName>
                </value>
                <value>
                    <fullName>Relaxation &amp; Quiet Zones</fullName>
                </value>
                <value>
                    <fullName>Spa &amp; Wellness</fullName>
                </value>
                <value>
                    <fullName>Swimming Pools</fullName>
                </value>
                <value>
                    <fullName>Tennis &amp; Pickleball</fullName>
                </value>
                <value>
                    <fullName>Water Sports</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lifetime_Experience_Bookings__c</fullName>
        <description>The &quot;Lifetime Experience Bookings&quot; field counts the total bookings a contact has made, offering insights into guest engagement and loyalty.</description>
        <label>Lifetime Experience Bookings</label>
        <summaryForeignKey>Booking__c.Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lifetime_Reservations__c</fullName>
        <description>The total lifetime reservations completed by a Guest and provided by Data Cloud</description>
        <label>Lifetime Reservations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lifetime_Value__c</fullName>
        <description>The Guests Lifetime Value as calculated from the data in Data Cloud</description>
        <label>Lifetime Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Room_Cost__c</fullName>
        <description>Copied from Data Cloud Spend Profile Calculated Insight</description>
        <label>Maximum Room Cost</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Membership_Number__c</fullName>
        <formula>External_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Membership Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minimum_Room_Cost__c</fullName>
        <description>Copied from Data Cloud Spend Profile Calculated Insight</description>
        <label>Minimum Room Cost</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Check_in_Date__c</fullName>
        <label>Next Check-in Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Photo_URL__c</fullName>
        <description>The Photo_URL__c field stores the URL of profile photos uploaded by guests via our app, used for security.</description>
        <label>Photo URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Preferred_Name__c</fullName>
        <description>The PreferredName__c field captures the name a guest prefers to be addressed by, ensuring all interactions are personalized and respectful of the guest&apos;s identity and preferences. This can differ from their legal name or the name on their booking, providing a more tailored and comfortable guest experience.</description>
        <label>Preferred Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resume_Details__c</fullName>
        <label>Resume Details</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Resume_Text__c</fullName>
        <label>Resume Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>Guest_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>BulkMessageContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <label>Bulk_SMS_Contacts</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>